# koyu-runtime

./: .gitignore  AGENTS.md  KNOWN-ISSUES.md  README.md  design-doc-rev-1.md  iceoryx2-guide.md  interfaces.md  pyproject.toml  supervisor-plan.md  warden-guide.md
cli/: __init__.py  bring_up.py  main.py
cli/tests/: test_cli.py
docs/: philosophy.md
ipc/: events.py  types.py
ipc/tests/: conftest.py  test_blackboard.py  test_checks.py  test_events.py  test_node.py  test_service.py  test_streams.py  test_types.py
koyu_runtime/: __init__.py
koyu_runtime/cli/: bring_up.py  main.py
koyu_runtime/cli/tests/: test_cli.py
koyu_runtime/ipc/: __init__.py  blackboard.py  checks.py  node.py  service.py  streams.py
koyu_runtime/ipc/tests/: test_blackboard.py  test_checks.py  test_events.py  test_node.py  test_service.py  test_streams.py  test_types.py
koyu_runtime/services/: __init__.py  bridge.py  data_recorder.py  episode_schema.py  inbox.py  ipc_logger.py  param_server.py
koyu_runtime/services/tests/: conftest.py  test_data_recorder.py  test_data_recorder_bundle.py  test_data_recorder_e2e.py  test_episode_schema.py  test_ipc_logger.py  test_paired.py  test_param_server.py  test_verdicts.py
koyu_runtime/warden/: __init__.py  hooks.py  supervisord_client.py
koyu_runtime/warden/tests/: test_boot.py  test_boot_integration.py  test_conf_generator.py  test_runtime_dir.py  test_services.py  test_supervisord_client.py
services/: bridge.py  data_recorder.py  episode_schema.py  ipc_logger.py  param_server.py
services/tests/: test_data_recorder.py  test_data_recorder_bundle.py  test_data_recorder_e2e.py  test_episode_schema.py  test_ipc_logger.py  test_paired.py  test_param_server.py  test_verdicts.py
warden/: boot.py  conf_generator.py  runtime_dir.py  services.py
warden/tests/: test_boot.py  test_boot_integration.py  test_conf_generator.py  test_runtime_dir.py  test_services.py  test_supervisord_client.py
