[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "koyu-runtime"
version = "0.1.0"
description = "koyu-runtime — agent-operable supervisor over supervisord"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6",
    "supervisor>=4.3",
    "iceoryx2==0.8.1",
    "pillow>=10",
    "pydantic>=2",
    "numpy>=1.24",
    "pyarrow>=14",
    "av>=11",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

# No console script of our own: the `koyu` binary belongs to koyu-cli (the
# umbrella). We plug our verbs into it via the koyu.plugins entry-point group;
# install koyu-cli alongside and `koyu up` routes here. `python -m cli.main`
# always works regardless.
[project.entry-points."koyu.plugins"]
up = "cli.main:main"
down = "cli.main:main"
status = "cli.main:main"
restart = "cli.main:main"
apply = "cli.main:main"
logs = "cli.main:main"
set = "cli.main:main"
get = "cli.main:main"
tail = "cli.main:main"
frame = "cli.main:main"

[tool.setuptools.packages.find]
include = ["warden*", "ipc*", "cli*", "services*"]
exclude = ["warden.tests*", "ipc.tests*", "cli.tests*", "services.tests*"]

[tool.pytest.ini_options]
testpaths = ["warden/tests", "ipc/tests", "cli/tests", "services/tests"]
