[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "koyu-runtime"
version = "0.1.0"
description = "koyu-runtime — agent-operable supervisor over supervisord"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6",
    "supervisor>=4.3",
    "iceoryx2==0.8.1",
    "pillow>=10",
    "pydantic>=2",
    "numpy>=1.24",
    "pyarrow>=14",
    "av>=11",
    "aiohttp>=3.9",
    "koyu-cli>=0.1",       # owns the `koyu` binary; our verbs plug into it
]

[project.optional-dependencies]
dev = ["pytest>=8"]

# No console script of our own: the `koyu` binary belongs to koyu-cli (the
# umbrella). We plug our verbs into it via the koyu.plugins entry-point group;
# install koyu-cli alongside and `koyu up` routes here.
# `python -m koyu_runtime.cli.main` always works regardless.
[project.entry-points."koyu.plugins"]
up = "koyu_runtime.cli.main:main"
down = "koyu_runtime.cli.main:main"
status = "koyu_runtime.cli.main:main"
restart = "koyu_runtime.cli.main:main"
apply = "koyu_runtime.cli.main:main"
logs = "koyu_runtime.cli.main:main"
set = "koyu_runtime.cli.main:main"
get = "koyu_runtime.cli.main:main"
tail = "koyu_runtime.cli.main:main"
frame = "koyu_runtime.cli.main:main"
context = "koyu_runtime.cli.main:main"

[tool.setuptools.packages.find]
include = ["koyu_runtime*"]
exclude = ["*.tests", "*.tests.*"]

[tool.pytest.ini_options]
testpaths = [
    "koyu_runtime/warden/tests",
    "koyu_runtime/ipc/tests",
    "koyu_runtime/cli/tests",
    "koyu_runtime/services/tests",
]
